# SHE_CTE

./: .cproject  .gitignore  .gitlab-ci.yml  .jenkinsFile  .project  .pydevproject  CHANGELOG  CHANGELOG.md  CMakeLists.txt  README  README.md  manual_pipeline.sh  run_mock_psf_fitting.sh  run_mock_shear_estimation.sh
SHE_CTE/: CMakeLists.txt
SHE_CTE/python/SHE_CTE/: __init__.py  executor.py  magic_values.py
SHE_CTE/tests/python/: import_test.py
SHE_CTE_BiasMeasurement/: CMakeLists.txt
SHE_CTE_BiasMeasurement/python/SHE_CTE_BiasMeasurement/: DrawSensTypes.py  MeasureBias.py  MeasureStatistics.py  PlotBias.py  PlotPsfSensitivity.py  PrintBias.py  __init__.py  bfd_statistics_calculation.py  bias_calculation.py  bias_calculation_bfd.py  bias_measurement_outputting.py  find_files.py  input_file_finding.py  magic_values.py  measure_bias.py  measure_statistics.py  measurement_extraction.py  plot_bias_measurements.py  plot_psf_sensitivity.py  print_bias.py  statistics_calculation.py
SHE_CTE_BiasMeasurement/scripts/: DrawSensTypes
SHE_CTE_BiasMeasurement/tests/python/: import_test.py  measure_bfd_statistics_test.py  measure_bias_test.py  test_sample.py  (+1 more)
SHE_CTE_ImageSimulation/: CMakeLists.txt
SHE_CTE_PSFFitting/: CMakeLists.txt
SHE_CTE_Pipeline/: CMakeLists.txt
SHE_CTE_PipelineUtility/: CMakeLists.txt
SHE_CTE_PipelineUtility/conf/: SHE_CTE_ConvertToHDF5.conf  SHE_CTE_DetectorBatches.conf  SHE_CTE_ObjectIdSplit.conf  SHE_CTE_ShearEstimatesMerge.conf
SHE_CTE_ScalingExperiments/: CMakeLists.txt
SHE_CTE_ShearEstimation/: CMakeLists.txt
SHE_CTE_ShearReconciliation/: CMakeLists.txt
SHE_CTE_ShearValidation/: CMakeLists.txt
SHE_CTE_ShearValidation/notebooks/: ShearComparison.ipynb
SHE_CalibMLCore/: CMakeLists.txt
SHE_MomentsML/: CMakeLists.txt
(+219 files in other folders)
